<resources>
    //App
    <string name="app_name">Age Calculator</string>
    <string name="edit_today">Todays Date</string>
    <string name="edit_birthday">Date of Birth</string>
    <string name="button_calculate">Calculate</string>
    <string name="title_age">Age</string>
    <string name="info_age_year">0</string>
    <string name="info_age_month">0</string>
    <string name="info_age_day">0</string>
    <string name="title_age_year">Years</string>
    <string name="title_age_month">Months</string>
    <string name="title_age_day">Days</string>
    <string name="title_next_birthday">Next birthday</string>
    <string name="info_next_birthday_month">0</string>
    <string name="info_next_birthday_day">0</string>
    <string name="title_next_birthday_month">Months</string>
    <string name="title_next_birthday_day">Days</string>

    //Menu
    <string name="menu_settings">Settings</string>
    <string name="menu_rate">Rate</string>
    <string name="menu_share">Share</string>

    //Settings
    <string name="pref_save_birthday_summary">Save birthday for quick access</string>
    <string name="pref_save_birthday">Save birthday</string>

    //Add ID
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_settings">Settings</string>
</resources>
